Work on periodic padding

--- a/scripts/nets/periodic_padding.ipynb
+++ b/scripts/nets/periodic_padding.ipynb
@@ -85,32 +85,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kernel: [1 2 3 4 5]\n",
+      "Kernel: [1 2 3]\n",
       "K matrix:\n",
-      "[[3 4 5 0 0 0 0 0 0 0 0 0 0 0 1 2]\n",
-      " [2 3 4 5 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5]\n",
-      " [5 0 0 0 0 0 0 0 0 0 0 0 1 2 3 4]\n",
-      " [4 5 0 0 0 0 0 0 0 0 0 0 0 1 2 3]]\n"
+      "[[2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
+      " [1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]\n",
+      " [3 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2]]\n"
      ]
     }
    ],
    "source": [
     "# Set sizes and build simple kernel\n",
     "N = 16\n",
-    "P = 5\n",
-    "d = 2\n",
+    "P = 3\n",
+    "d = 1\n",
     "k = np.arange(1, P+1)\n",
     "print('Kernel:', k)\n",
     "\n",
@@ -163,8 +163,7 @@
      "output_type": "stream",
      "text": [
       "E matrix:\n",
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
+      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
       " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
@@ -181,12 +180,11 @@
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
+      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
       "x: \n",
       "  [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
       "z = G @ x: \n",
-      "  [14 15  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15  0  1]\n"
+      "  [15  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15  0]\n"
      ]
     }
    ],
@@ -242,26 +240,26 @@
      "output_type": "stream",
      "text": [
       "G matrix:\n",
-      "[[1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 4 5]]\n",
+      "[[1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]]\n",
       "y = K @ x: \n",
-      "  [ 58  41  40  55  70  85 100 115 130 145 160 175 190 205 140  91]\n",
+      "  [18  8 14 20 26 32 38 44 50 56 62 68 74 80 86 44]\n",
       "y = G @ E @ x: \n",
-      "  [ 58  41  40  55  70  85 100 115 130 145 160 175 190 205 140  91]\n",
+      "  [18  8 14 20 26 32 38 44 50 56 62 68 74 80 86 44]\n",
       "  Same: True\n"
      ]
     }
@@ -303,8 +301,7 @@
      "output_type": "stream",
      "text": [
       "y = (tf conv): \n",
-      "  [ 58.  41.  40.  55.  70.  85. 100. 115. 130. 145. 160. 175. 190. 205.\n",
-      " 140.  91.]\n",
+      "  [18.  8. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 44.]\n",
       "  Same: True\n"
      ]
     }
@@ -315,8 +312,7 @@
     "# Reshape kernel as (*size, channels, features)\n",
     "k_tens = tf.convert_to_tensor(k[None, :, None, None].astype(float))\n",
     "\n",
-    "with tf.device('/cpu:0'):\n",
-    "    y2_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid')\n",
+    "y2_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid')\n",
     "y2 = y2_tens.numpy().flatten()\n",
     "\n",
     "print('y = (tf conv): \\n ', y2)\n",
@@ -350,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "y = (strided tf conv): \n",
-      "  [ 58.  40.  70. 100. 130. 160. 190. 140.]\n",
+      "  [18. 14. 26. 38. 50. 62. 74. 86.]\n",
       "  Same: True\n"
      ]
     }
@@ -360,8 +356,7 @@
     "s = 2\n",
     "\n",
     "# Run strided convolution\n",
-    "with tf.device('/cpu:0'):\n",
-    "    y3_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid', strides=(1,s))\n",
+    "y3_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid', strides=(1,s))\n",
     "y3 = y3_tens.numpy().flatten()\n",
     "\n",
     "print('y = (strided tf conv): \\n ', y3)\n",
@@ -395,12 +390,12 @@
      "output_type": "stream",
      "text": [
       "x = K[::s].T @ y: \n",
-      "  [36  2  5  8 14 14 23 20 32 26 41 32 50 38 51 28]\n",
+      "  [ 0  1  2  5  4  9  6 13  8 17 10 21 12 25 14 21]\n",
       "x = E.T @ G[::s].T @ y: \n",
-      "  [36  2  5  8 14 14 23 20 32 26 41 32 50 38 51 28]\n",
+      "  [ 0  1  2  5  4  9  6 13  8 17 10 21 12 25 14 21]\n",
       "  Same: True\n",
       "x = E.T @ (tf conv trans): \n",
-      "  [36.  2.  5.  8. 14. 14. 23. 20. 32. 26. 41. 32. 50. 38. 51. 28.]\n",
+      "  [ 0.  1.  2.  5.  4.  9.  6. 13.  8. 17. 10. 21. 12. 25. 14. 21.]\n",
       "  Same: True\n"
      ]
     }
@@ -425,8 +420,7 @@
     "\n",
     "# Run strided up-convolution\n",
     "output_shape = (z_tens.shape)\n",
-    "with tf.device('/cpu:0'):\n",
-    "    x2_tens = keras.backend.conv2d_transpose(y_tens, k_tens, output_shape, padding='valid', strides=(1,s))\n",
+    "x2_tens = keras.backend.conv2d_transpose(y_tens, k_tens, output_shape, padding='valid', strides=(1,s))\n",
     "x2 = E.T @ x2_tens.numpy().flatten()\n",
     "\n",
     "print('x = E.T @ (tf conv trans): \\n ', x2)\n",
@@ -441,6 +435,102 @@
     "\n",
     "We have seen that we simply need to have implementations of the forward and transposed padding/extension operators $E$ and $E^T$ to produce periodic convolutions with tensorflow.\n",
     "These two operators need to be fast and differentiable to be usable in production."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom implementations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's also check our custom tensorflow implementations for correctness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y = (tf conv): \n",
+      "  [18.  8. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 44.]\n",
+      "  Same: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshape input as (batch, *size, channels)\n",
+    "z_tens = tf.convert_to_tensor(z[None, None, :, None].astype(float))\n",
+    "# Reshape kernel as (*size, channels, features)\n",
+    "k_tens = tf.convert_to_tensor(k[None, :, None, None].astype(float))\n",
+    "\n",
+    "#inputs = keras.layers.Input((1, N+P-1, 1), dtype=np.float64)\n",
+    "conv = keras.layers.Conv2D(1, (1, P), padding='valid', input_shape=(1, N+P-1, 1), dtype=np.float64)\n",
+    "#model = keras.models.Model(inputs, conv(inputs))\n",
+    "model = keras.models.Sequential()\n",
+    "model.add(conv)\n",
+    "conv.set_weights([k_tens, np.array([0])])\n",
+    "y4 = model(z_tens).numpy().flatten()\n",
+    "\n",
+    "print('y = (tf conv): \\n ', y4)\n",
+    "print('  Same:', np.allclose(y0, y4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'PeriodicConv3D' object has no attribute 'trainable'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-659a840a14b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#model = keras.models.Model(inputs, conv(inputs))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mconv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk_tens\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;31m# y4 = model(z_tens).numpy().flatten()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mset_weights\u001b[0;34m(self, weights)\u001b[0m\n\u001b[1;32m   1485\u001b[0m             \u001b[0mlayer\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0mspecifications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1486\u001b[0m     \"\"\"\n\u001b[0;32m-> 1487\u001b[0;31m     \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1488\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1489\u001b[0m       raise ValueError('You called `set_weights(weights)` on layer \"' +\n",
+      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mweights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    247\u001b[0m       \u001b[0mA\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0mvariables\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    248\u001b[0m     \"\"\"\n\u001b[0;32m--> 249\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_weights\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnon_trainable_weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mtrainable_weights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    223\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mtrainable_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_trainable_weights\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'PeriodicConv3D' object has no attribute 'trainable'"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshape input as (batch, *size, channels)\n",
+    "x_tens = tf.convert_to_tensor(x[None, None, None, :, None].astype(float))\n",
+    "# Reshape kernel as (*size, channels, features)\n",
+    "k_tens = tf.convert_to_tensor(k[None, None, :, None, None].astype(float))\n",
+    "\n",
+    "#inputs = keras.layers.Input((1, 1, N, 1), dtype=np.float64)\n",
+    "conv = unet.PeriodicConv3D(1, (1, 1, P), (0, 0, d), weights=[k_tens, np.array([0])], dtype=np.float64)\n",
+    "model = keras.models.Sequential()\n",
+    "model.add(conv)\n",
+    "#model = keras.models.Model(inputs, conv(inputs))\n",
+    "conv.set_weights([k_tens, np.array([0])])\n",
+    "# y4 = model(z_tens).numpy().flatten()\n",
+    "\n",
+    "# print('y = (tf conv): \\n ', y4)\n",
+    "# print('  Same:', np.allclose(y0, y4))"
    ]
   },
   {
@@ -467,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
