--- a/scripts/nets/periodic_padding.ipynb
+++ b/scripts/nets/periodic_padding.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -87,28 +87,20 @@
      "text": [
       "Kernel: [1 2 3]\n",
       "K matrix:\n",
-      "[[2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]\n",
-      " [3 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2]]\n"
+      "[[2 3 0 0 0 0 0 1]\n",
+      " [1 2 3 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 1 2 3]\n",
+      " [3 0 0 0 0 0 1 2]]\n"
      ]
     }
    ],
    "source": [
     "# Set sizes and build simple kernel\n",
-    "N = 16\n",
+    "N = 8\n",
     "P = 3\n",
     "d = 1\n",
     "k = np.arange(1, P+1)\n",
@@ -153,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {
     "scrolled": false
    },
@@ -163,28 +155,20 @@
      "output_type": "stream",
      "text": [
       "E matrix:\n",
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
+      "[[0 0 0 0 0 0 0 1]\n",
+      " [1 0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0]\n",
+      " [0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 0 1 0 0]\n",
+      " [0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 1]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
       "x: \n",
-      "  [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "  [1 2 3 4 5 6 7 8]\n",
       "z = G @ x: \n",
-      "  [15  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15  0]\n"
+      "  [8 1 2 3 4 5 6 7 8 1]\n"
      ]
     }
    ],
@@ -200,7 +184,7 @@
     "print(E)\n",
     "\n",
     "# Apple to an example\n",
-    "x = np.arange(N)\n",
+    "x = np.arange(1, N+1)\n",
     "print('x: \\n ', x)\n",
     "z = E @ x\n",
     "print('z = G @ x: \\n ', z)"
@@ -232,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -240,26 +224,18 @@
      "output_type": "stream",
      "text": [
       "G matrix:\n",
-      "[[1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]]\n",
+      "[[1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3]]\n",
       "y = K @ x: \n",
-      "  [18  8 14 20 26 32 38 44 50 56 62 68 74 80 86 44]\n",
+      "  [16 14 20 26 32 38 44 26]\n",
       "y = G @ E @ x: \n",
-      "  [18  8 14 20 26 32 38 44 50 56 62 68 74 80 86 44]\n",
+      "  [16 14 20 26 32 38 44 26]\n",
       "  Same: True\n"
      ]
     }
@@ -293,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +277,7 @@
      "output_type": "stream",
      "text": [
       "y = (tf conv): \n",
-      "  [18.  8. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 44.]\n",
+      "  [16. 14. 20. 26. 32. 38. 44. 26.]\n",
       "  Same: True\n"
      ]
     }
@@ -338,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -346,14 +322,14 @@
      "output_type": "stream",
      "text": [
       "y = (strided tf conv): \n",
-      "  [18. 14. 26. 38. 50. 62. 74. 86.]\n",
+      "  [16. 32.]\n",
       "  Same: True\n"
      ]
     }
    ],
    "source": [
     "# Set stride size\n",
-    "s = 2\n",
+    "s = 4\n",
     "\n",
     "# Run strided convolution\n",
     "y3_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid', strides=(1,s))\n",
@@ -382,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -390,23 +366,20 @@
      "output_type": "stream",
      "text": [
       "x = K[::s].T @ y: \n",
-      "  [ 0  1  2  5  4  9  6 13  8 17 10 21 12 25 14 21]\n",
+      "  [2 3 0 2 4 6 0 1]\n",
       "x = E.T @ G[::s].T @ y: \n",
-      "  [ 0  1  2  5  4  9  6 13  8 17 10 21 12 25 14 21]\n",
+      "  [2 3 0 2 4 6 0 1]\n",
       "  Same: True\n",
       "x = E.T @ (tf conv trans): \n",
-      "  [ 0.  1.  2.  5.  4.  9.  6. 13.  8. 17. 10. 21. 12. 25. 14. 21.]\n",
+      "  [2. 3. 0. 2. 4. 6. 0. 1.]\n",
       "  Same: True\n"
      ]
     }
    ],
    "source": [
-    "# Set stride size\n",
-    "s = 2\n",
-    "\n",
     "# Produce input data\n",
     "M = (N + s - 1) // s\n",
-    "y = np.arange(M)\n",
+    "y = np.arange(1, M+1)\n",
     "\n",
     "# Direct up-convolutions\n",
     "x0 = K[::s].T @ y\n",
@@ -453,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,8 +434,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Equisampling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {
     "scrolled": false
    },
@@ -472,65 +452,104 @@
      "output_type": "stream",
      "text": [
       "y = (tf conv): \n",
-      "  [18.  8. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 44.]\n",
+      "  [16. 14. 20. 26. 32. 38. 44. 26.]\n",
       "  Same: True\n"
      ]
     }
    ],
    "source": [
     "# Reshape input as (batch, *size, channels)\n",
-    "z_tens = tf.convert_to_tensor(z[None, None, :, None].astype(float))\n",
+    "x3_tens = tf.convert_to_tensor(x[None, None, None, :, None].astype(float))\n",
     "# Reshape kernel as (*size, channels, features)\n",
-    "k_tens = tf.convert_to_tensor(k[None, :, None, None].astype(float))\n",
+    "k3_tens = tf.convert_to_tensor(k[None, None, :, None, None].astype(float))\n",
     "\n",
-    "#inputs = keras.layers.Input((1, N+P-1, 1), dtype=np.float64)\n",
-    "conv = keras.layers.Conv2D(1, (1, P), padding='valid', input_shape=(1, N+P-1, 1), dtype=np.float64)\n",
-    "#model = keras.models.Model(inputs, conv(inputs))\n",
-    "model = keras.models.Sequential()\n",
-    "model.add(conv)\n",
-    "conv.set_weights([k_tens, np.array([0])])\n",
-    "y4 = model(z_tens).numpy().flatten()\n",
+    "filters = 1\n",
+    "kernel_size = (1, 1, P)\n",
+    "kernel_center = (0, 0, d)\n",
+    "input_shape = (1, 1, 1, N, 1)\n",
+    "dtype = np.float64\n",
+    "weights = [k3_tens, np.array([0])]\n",
+    "\n",
+    "model = unet.PeriodicConv3D(filters, kernel_size, kernel_center)\n",
+    "model(tf.zeros(input_shape, dtype=dtype))\n",
+    "model.set_weights(weights)\n",
+    "y4 = model(x3_tens).numpy().flatten()\n",
     "\n",
     "print('y = (tf conv): \\n ', y4)\n",
     "print('  Same:', np.allclose(y0, y4))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downsampling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'PeriodicConv3D' object has no attribute 'trainable'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-659a840a14b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#model = keras.models.Model(inputs, conv(inputs))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mconv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk_tens\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;31m# y4 = model(z_tens).numpy().flatten()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mset_weights\u001b[0;34m(self, weights)\u001b[0m\n\u001b[1;32m   1485\u001b[0m             \u001b[0mlayer\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0mspecifications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1486\u001b[0m     \"\"\"\n\u001b[0;32m-> 1487\u001b[0;31m     \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1488\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1489\u001b[0m       raise ValueError('You called `set_weights(weights)` on layer \"' +\n",
-      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mweights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    247\u001b[0m       \u001b[0mA\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0mvariables\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    248\u001b[0m     \"\"\"\n\u001b[0;32m--> 249\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_weights\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnon_trainable_weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Software/miniconda3/envs/p3/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mtrainable_weights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    223\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mtrainable_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 225\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_trainable_weights\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m   \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PeriodicConv3D' object has no attribute 'trainable'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y = (strided tf conv): \n",
+      "  [16. 32.]\n",
+      "  Same: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "strides = (1, 1, s)\n",
+    "\n",
+    "model = unet.PeriodicConv3D(filters, kernel_size, kernel_center, strides=strides)\n",
+    "model(tf.zeros(input_shape, dtype=dtype))\n",
+    "model.set_weights(weights)\n",
+    "y5 = model(x3_tens).numpy().flatten()\n",
+    "\n",
+    "print('y = (strided tf conv): \\n ', y5)\n",
+    "print('  Same:', np.allclose(y0[::s], y5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upsampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = E.T @ (tf conv trans): \n",
+      "  [1. 2. 3. 0. 2. 4. 6. 0.]\n",
+      "[2 3 0 2 4 6 0 1]\n"
      ]
     }
    ],
    "source": [
     "# Reshape input as (batch, *size, channels)\n",
-    "x_tens = tf.convert_to_tensor(x[None, None, None, :, None].astype(float))\n",
-    "# Reshape kernel as (*size, channels, features)\n",
-    "k_tens = tf.convert_to_tensor(k[None, None, :, None, None].astype(float))\n",
+    "y3_tens = tf.convert_to_tensor(y[None, None, None, :, None].astype(float))\n",
     "\n",
-    "#inputs = keras.layers.Input((1, 1, N, 1), dtype=np.float64)\n",
-    "conv = unet.PeriodicConv3D(1, (1, 1, P), (0, 0, d), weights=[k_tens, np.array([0])], dtype=np.float64)\n",
-    "model = keras.models.Sequential()\n",
-    "model.add(conv)\n",
-    "#model = keras.models.Model(inputs, conv(inputs))\n",
-    "conv.set_weights([k_tens, np.array([0])])\n",
-    "# y4 = model(z_tens).numpy().flatten()\n",
+    "#model = unet.PeriodicConv3DTranspose(filters, kernel_size, kernel_center, strides=strides)\n",
+    "model = keras.layers.Conv2DTranspose(filters, kernel_size[1:], strides=strides[1:], padding='valid')\n",
+    "model(tf.zeros(y3_tens.shape[1:], dtype=dtype))\n",
+    "model.set_weights([k3_tens[0], np.array([0])])\n",
+    "x3 = model(y3_tens[0]).numpy().flatten()\n",
     "\n",
-    "# print('y = (tf conv): \\n ', y4)\n",
-    "# print('  Same:', np.allclose(y0, y4))"
+    "print('x = E.T @ (tf conv trans): \\n ', x3)\n",
+    "#print('  Same:', np.allclose(x0, x3))\n",
+    "print(x0)"
    ]
   },
   {
