Finish periodic up/down conv

--- a/scripts/nets/periodic_padding.ipynb
+++ b/scripts/nets/periodic_padding.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,22 +87,31 @@
      "text": [
       "Kernel: [1 2 3]\n",
       "K matrix:\n",
-      "[[2 3 0 0 0 0 0 1]\n",
-      " [1 2 3 0 0 0 0 0]\n",
-      " [0 1 2 3 0 0 0 0]\n",
-      " [0 0 1 2 3 0 0 0]\n",
-      " [0 0 0 1 2 3 0 0]\n",
-      " [0 0 0 0 1 2 3 0]\n",
-      " [0 0 0 0 0 1 2 3]\n",
-      " [3 0 0 0 0 0 1 2]]\n"
+      "[[2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
+      " [1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]\n",
+      " [3 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2]]\n"
      ]
     }
    ],
    "source": [
-    "# Set sizes and build simple kernel\n",
-    "N = 8\n",
-    "P = 3\n",
-    "d = 1\n",
+    "N = 16  # Data size\n",
+    "P = 3   # Kernel size\n",
+    "d = 1   # Kernel center\n",
+    "s = 2   # Stride for up/downsampling\n",
+    "\n",
     "k = np.arange(1, P+1)\n",
     "print('Kernel:', k)\n",
     "\n",
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -155,20 +164,28 @@
      "output_type": "stream",
      "text": [
       "E matrix:\n",
-      "[[0 0 0 0 0 0 0 1]\n",
-      " [1 0 0 0 0 0 0 0]\n",
-      " [0 1 0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0 0 0]\n",
-      " [0 0 0 1 0 0 0 0]\n",
-      " [0 0 0 0 1 0 0 0]\n",
-      " [0 0 0 0 0 1 0 0]\n",
-      " [0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 0 0 0 1]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
+      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
+      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
+      " [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
       "x: \n",
-      "  [1 2 3 4 5 6 7 8]\n",
+      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
       "z = G @ x: \n",
-      "  [8 1 2 3 4 5 6 7 8 1]\n"
+      "  [16  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16  1]\n"
      ]
     }
    ],
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,18 +241,26 @@
      "output_type": "stream",
      "text": [
       "G matrix:\n",
-      "[[1 2 3 0 0 0 0 0 0 0]\n",
-      " [0 1 2 3 0 0 0 0 0 0]\n",
-      " [0 0 1 2 3 0 0 0 0 0]\n",
-      " [0 0 0 1 2 3 0 0 0 0]\n",
-      " [0 0 0 0 1 2 3 0 0 0]\n",
-      " [0 0 0 0 0 1 2 3 0 0]\n",
-      " [0 0 0 0 0 0 1 2 3 0]\n",
-      " [0 0 0 0 0 0 0 1 2 3]]\n",
+      "[[1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]]\n",
       "y = K @ x: \n",
-      "  [16 14 20 26 32 38 44 26]\n",
+      "  [24 14 20 26 32 38 44 50 56 62 68 74 80 86 92 50]\n",
       "y = G @ E @ x: \n",
-      "  [16 14 20 26 32 38 44 26]\n",
+      "  [24 14 20 26 32 38 44 50 56 62 68 74 80 86 92 50]\n",
       "  Same: True\n"
      ]
     }
@@ -269,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "y = (tf conv): \n",
-      "  [16. 14. 20. 26. 32. 38. 44. 26.]\n",
+      "  [24. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 92. 50.]\n",
       "  Same: True\n"
      ]
     }
@@ -314,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,15 +347,12 @@
      "output_type": "stream",
      "text": [
       "y = (strided tf conv): \n",
-      "  [16. 32.]\n",
+      "  [24. 20. 32. 44. 56. 68. 80. 92.]\n",
       "  Same: True\n"
      ]
     }
    ],
    "source": [
-    "# Set stride size\n",
-    "s = 4\n",
-    "\n",
     "# Run strided convolution\n",
     "y3_tens = keras.backend.conv2d(z_tens, k_tens, padding='valid', strides=(1,s))\n",
     "y3 = y3_tens.numpy().flatten()\n",
@@ -358,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -366,12 +388,12 @@
      "output_type": "stream",
      "text": [
       "x = K[::s].T @ y: \n",
-      "  [2 3 0 2 4 6 0 1]\n",
+      "  [ 2  5  4  9  6 13  8 17 10 21 12 25 14 29 16 25]\n",
       "x = E.T @ G[::s].T @ y: \n",
-      "  [2 3 0 2 4 6 0 1]\n",
+      "  [ 2  5  4  9  6 13  8 17 10 21 12 25 14 29 16 25]\n",
       "  Same: True\n",
       "x = E.T @ (tf conv trans): \n",
-      "  [2. 3. 0. 2. 4. 6. 0. 1.]\n",
+      "  [ 2.  5.  4.  9.  6. 13.  8. 17. 10. 21. 12. 25. 14. 29. 16. 25.]\n",
       "  Same: True\n"
      ]
     }
@@ -426,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -452,7 +474,7 @@
      "output_type": "stream",
      "text": [
       "y = (tf conv): \n",
-      "  [16. 14. 20. 26. 32. 38. 44. 26.]\n",
+      "  [24. 14. 20. 26. 32. 38. 44. 50. 56. 62. 68. 74. 80. 86. 92. 50.]\n",
       "  Same: True\n"
      ]
     }
@@ -488,15 +510,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y = (strided tf conv): \n",
-      "  [16. 32.]\n",
+      "y = (custom strided tf conv): \n",
+      "  [24. 20. 32. 44. 56. 68. 80. 92.]\n",
       "  Same: True\n"
      ]
     }
@@ -509,7 +531,7 @@
     "model.set_weights(weights)\n",
     "y5 = model(x3_tens).numpy().flatten()\n",
     "\n",
-    "print('y = (strided tf conv): \\n ', y5)\n",
+    "print('y = (custom strided tf conv): \\n ', y5)\n",
     "print('  Same:', np.allclose(y0[::s], y5))"
    ]
   },
@@ -521,8 +543,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensorflow's transposed convolutions return shape $N_\\mathrm{out} = s (M - 1) + \\max(P, s)$.\n",
+    "For strides that evenly divide the data size, we have $M = N / s$.\n",
+    "We therefore need to pad the output by $(N + P - 1) - N_\\mathrm{out} = P + s - 1 - \\max(P, s) = \\min(P, s) - 1$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -531,9 +562,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = E.T @ (tf conv trans): \n",
-      "  [1. 2. 3. 0. 2. 4. 6. 0.]\n",
-      "[2 3 0 2 4 6 0 1]\n"
+      "x = (custom tf conv trans): \n",
+      "  [ 2.  5.  4.  9.  6. 13.  8. 17. 10. 21. 12. 25. 14. 29. 16. 25.]\n",
+      "  Same: True\n"
      ]
     }
    ],
@@ -541,15 +572,13 @@
     "# Reshape input as (batch, *size, channels)\n",
     "y3_tens = tf.convert_to_tensor(y[None, None, None, :, None].astype(float))\n",
     "\n",
-    "#model = unet.PeriodicConv3DTranspose(filters, kernel_size, kernel_center, strides=strides)\n",
-    "model = keras.layers.Conv2DTranspose(filters, kernel_size[1:], strides=strides[1:], padding='valid')\n",
-    "model(tf.zeros(y3_tens.shape[1:], dtype=dtype))\n",
-    "model.set_weights([k3_tens[0], np.array([0])])\n",
-    "x3 = model(y3_tens[0]).numpy().flatten()\n",
+    "model = unet.PeriodicConv3DTranspose(filters, kernel_size, kernel_center, strides=strides)\n",
+    "model(tf.zeros(y3_tens.shape, dtype=dtype))\n",
+    "model.set_weights([k3_tens, np.array([0])])\n",
+    "x3 = model(y3_tens).numpy().flatten()\n",
     "\n",
-    "print('x = E.T @ (tf conv trans): \\n ', x3)\n",
-    "#print('  Same:', np.allclose(x0, x3))\n",
-    "print(x0)"
+    "print('x = (custom tf conv trans): \\n ', x3)\n",
+    "print('  Same:', np.allclose(x0, x3))"
    ]
   },
   {
